.kubernetes/deployment-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP}
  labels:
    app: ${APP}
spec:
  replicas: ${REPLICAS}
  selector:
    matchLabels:
      app: ${APP}
  template:
    metadata:
      labels:
        app: ${APP}
    spec:
      containers:
        - name: ${APP}
          image: ${CI_REGISTRY_IMAGE}:${TAG}
          command: ["./main"]
          args: ["${APP}", "--config", "/app/.configs/config.yaml"]
          volumeMounts:
            - name: ${APP}-pv-storage
              mountPath: "/app/vm/"
            - name: forklift-config
              mountPath: /app/.configs/
              readOnly: true
          resources:
            limits:
              memory: 200Mi
              cpu: 250m
            requests:
              memory: 50Mi
              cpu: 50m
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: $CI_PROJECT_ROOT_NAMESPACE-secret
      volumes:
        - name: ${APP}-pv-storage
          persistentVolumeClaim:
            claimName: ${APP}-pv-claim
        - name: forklift-config
          configMap:
            name: forklift-config
            items:
              - key: config-${ENV}.yaml
                path: config.yaml
