.kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${APP}-service
  labels:
    app: ${APP}
    tier: backend
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: ${APP}
  type: ClusterIP
